# logindemo

./: .gitignore  .gitmodules  LICENSE  README.md
android/: .gitignore  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/tencent/logindemo/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  grpc-helloworld.cc  native-lib.cpp
android/app/src/main/java/com/tencent/logindemo/: HelloworldActivity.java  MainActivity.kt
android/app/src/main/res/layout/: activity_helloworld.xml  activity_main.xml
android/app/src/test/java/com/tencent/logindemo/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
client/android/app/: build.gradle
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/cpp/: CMakeLists.txt  grpc-helloworld.cc  hello_world_impl.cpp  hello_world_impl.hpp
client/android/app/src/main/cpp/djinni/: NativeCommonReponse.cpp  NativeCommonReponse.hpp  NativeHelloWorld.cpp  common_reponse.hpp  hello_world.hpp
client/android/app/src/main/cpp/protos/: helloworld.grpc.pb.cc  helloworld.grpc.pb.h  helloworld.pb.cc  helloworld.pb.h
client/android/app/src/main/java/com/tencent/logindemo/activity/: HelloworldActivity.java  MainActivity.kt
client/android/app/src/main/java/com/tencent/logindemo/djinni/: CommonReponse.java  HelloWorld.java
client/android/app/src/main/res/layout/: activity_helloworld.xml  activity_main.xml  dialog_name_password.xml
client/interface/: logindemo.djinni  run_djinni.sh
common/: logindemo.djinni  run_djinni.sh
common/generated-src/cpp/: hello_world.hpp
common/generated-src/java/com/tencent/logindemo/: HelloWorld.java
common/generated-src/jni/: NativeHelloWorld.cpp  NativeHelloWorld.hpp
common/generated-src/objc/: LDHelloWorld+Private.h  LDHelloWorld+Private.mm  LDHelloWorld.h
common/handwritten-src/cpp/: hello_world_impl.hpp
deploy/: sources.list
deploy/interface/: run_djinni.sh
djinni/: logindemo.djinni  run_djinni.sh
docs/: BUILDING.md  NOTE.md
others/: Dockerfile  sources.list
protos/: helloworld.proto  run_proto.sh
server/account-service/: Dockerfile  WORKSPACE  docker-compose.yml
server/account-service/gRPC/: Dockerfile  README.md  WORKSPACE
server/account-service/gRPC/src/: BUILD  mysqlpool.cc  mysqlpool.h  server.cc
server/account-service/mysql/database/: db.sql
server/account-service/src/: BUILD  mysqlpool.h  server.cc
server/greeter-service/: Dockerfile  README.md
server/helloworld-service/: build.gradle  docker-compose.yml  settings.gradle
server/helloworld-service/gradle/wrapper/: gradle-wrapper.properties
server/helloworld-service/grpc/: Dockerfile  build.gradle  sources.list
server/helloworld-service/grpc/src/main/grpc/com/tencent/logindemo/proto/: GreeterGrpc.java
server/helloworld-service/grpc/src/main/java/com/tencent/logindemo/: HelloWorldServer.java
server/helloworld-service/grpc/src/main/java/com/tencent/logindemo/database/: DataBaseHelper.java
server/helloworld-service/grpc/src/main/java/com/tencent/logindemo/proto/: CommonResponse.java  CommonResponseOrBuilder.java  HelloReply.java  HelloRequest.java  HelloRequestOrBuilder.java  HelloWorldProto.java  LoginRequestOrBuilder.java  RefreshTokenRequest.java  RefreshTokenRequestOrBuilder.java  TokenInfo.java
server/helloworld-service/grpc/src/main/java/com/tencent/logindemo/service/: HelloWorldService.java
server/helloworld-service/grpc/src/main/java/com/tencent/logindemo/util/: Utils.java
server/helloworld-service/mysql/: Dockerfile
server/helloworld-service/mysql/database/: db.sql
server/helloworld-service/src/main/java/com/tencent/logindemo/: HelloWorldServer.java
server/helloworld-service/src/main/java/com/tencent/logindemo/database/: DataBaseHelper.java
server/helloworld-service/src/main/java/com/tencent/logindemo/proto/: HelloReplyOrBuilder.java  HelloWorldProto.java  LoginRequest.java  LoginResponse.java  LoginResponseOrBuilder.java  TokenInfoOrBuilder.java
server/helloworld-service/src/main/java/com/tencent/logindemo/service/: HelloWorldService.java
server/mysql-service/: Dockerfile  README.md  docker-compose.yml
server/mysql-service/database/: db.sql
